tests/snapshots/run_wpt_conformance__coreml_equal_float32_0D_scalar.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "equal.https.any.js",
    "equal float32 0D scalar",
    "coreml",
    "PASS",
)
