tests/snapshots/run_wpt_conformance__coreml_equal_float32_5D_tensor_and_broadcastable_0D_scalar.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
equal.https.any.js equal float32 5D tensor and broadcastable 0D scalar, coreml
 equal :: equal float32 5D tensor and broadcastable 0D scalar: index 5: actual=0 expected=1 tolerance=0
  inputs: inputA: [-3.5, -2, -1, 0, 1, 2.5, 3, 4.5, 5, -5.5, 6, -6.5, 7, -7.5, 8, -8.5, 9, 10.5, -11, 12.5, -13, 14.5, -15, 16.5 ...] (len=32); inputB: [2.5]
  expected output: [0, 0, 0, 0, 0, 1, 0, 0, 0, 0 ...] (len=32)
  actual output: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ...] (len=32)
  expected output full nd:
[0, 0, 0, 0, 0, 1, 0, 0, 0, 0, ...] (len=32, shape=[2, 2, 2, 2, 2])
  actual output full nd:
[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...] (len=32, shape=[2, 2, 2, 2, 2])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f32[2, 2, 2, 2, 2];
    inputB: f32[];
  }

  nodes {
    [output] = equal(inputA, inputB, label="");
  }

  outputs { output; }
}
